<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardBackgroundColor="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginBottom="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_5sdp"
    android:layout_marginLeft="@dimen/_5sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_5sdp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15ssp"
            tools:text="@string/title"
            android:text="@string/title"
            android:singleLine="true"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:paddingRight="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@android:color/black"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@android:color/darker_gray"
            tools:text="@string/date"
            android:text="@string/date"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            tools:text="@string/body"
            android:text="@string/body"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
